# zmips

./: Cargo.toml  README.md
zmips-opcodes/: Cargo.toml
zmips-opcodes/src/: instruction.rs  lib.rs  parser.rs  program.rs  regs.rs  shortcuts.rs
zmips-vm/: Cargo.toml
zmips-vm/src/: errors.rs  example_codes.rs  lib.rs  state.rs  vm.rs
zmips-vm/src/table/: aet.rs  mod.rs  processor.rs
