[package]
name = "zmips-opcodes"
version = "0.1.0"
edition = "2021"
authors = ["Chiro2001@163.com"]

license = "Apache-2.0"
description = "ZMIPS VM instructions"

[dependencies]
twenty-first = "0.21.1"
anyhow = "1.0"
itertools = "0.10.5"
num-traits = "0.2.15"
rand = "0.8.5"
strum = "0.24.1"
strum_macros = "0.24.1"
nom = "7.1"