[package]
name = "zmips-vm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twenty-first = "0.21.1"
anyhow = "1.0"
itertools = "0.10.5"
num-traits = "0.2.15"
rand = "0.8.5"
strum = "0.24.1"
strum_macros = "0.24.1"
nom = "7.1"
zmips-opcodes = { path = "../zmips-opcodes" }
ndarray = "0.15.6"
